# CG-HW7

./: CMakeLists.txt  README.md  main.cpp
